Refactored validation logic to support custom messages in `SchemaDetails`, updated validators and test cases accordingly
Working on more test cases.